--- a/front-end/index.html
+++ b/front-end/index.html
@@ -22,15 +22,28 @@
   </head>
 
   <body>
-    <div class="talk_con">
-      <div class="talk_show" id="words">
+    <ul>
+      <li><a>ChatBot</a></li>
+      <li style="float:right"><a href="#">Login</a></li>
+      <li style="float:right"><a href="#">Profile</a></li>
+    </ul>
+
+    <div class="outer-box">
+      <div class="inner-box" id="conversation">
         <div class="atalk"></div>
         <div class="btalk"></div>
       </div>
-      <div class="talk_input">
-        <input type="text" class="talk_word" id="talkwords" />
-        <input type="button" value="send" class="talk_sub" id="talksub" />
+      <div class="talk-input">
+        <input type="text" class="type-area" id="input-query" />
+        <input
+          type="button"
+          value="SEND"
+          class="send-btn"
+          id="send-query"
+          onclick="sendMessage()"
+        />
       </div>
     </div>
+    <script type="text/javascript" src="./assets/js/send.js"></script>
   </body>
 </html>
