add coginto authenticate

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,18 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Amazon Lex ChatBot</title>
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Quicksand"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css"
-    />
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.283.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script
+      type="text/javascript"
+      src="assets/js/sdk/lib/axios/dist/axios.standalone.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/js/sdk/lib/CryptoJS/rollups/hmac-sha256.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/js/sdk/lib/CryptoJS/rollups/sha256.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/js/sdk/lib/CryptoJS/components/hmac.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/js/sdk/lib/CryptoJS/components/enc-base64.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/js/sdk/lib/url-template/url-template.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/js/sdk/lib/apiGatewayCore/sigV4Client.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/js/sdk/lib/apiGatewayCore/apiGatewayClient.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/js/sdk/lib/apiGatewayCore/simpleHttpClient.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="assets/js/sdk/lib/apiGatewayCore/utils.js"
+    ></script>
+    <script type="text/javascript" src="assets/js/sdk/apigClient.js"></script>
+
+    <script type="text/javascript" src="assets/js/send.js"></script>
+    <script
+      type="text/javascript"
+      src="assets/js/authenticate-with-cognito.js"
+    ></script>
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
@@ -44,6 +82,5 @@
         />
       </div>
     </div>
-    <script type="text/javascript" src="./assets/js/send.js"></script>
   </body>
 </html>
